--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>{{ escape(handler.settings["blog_title"]) }}</title>
-    <link rel="stylesheet" href="{{ static_url("blog.css") }}" type="text/css">
-    <link rel="alternate" href="/feed" type="application/atom+xml" title="{{ escape(handler.settings["blog_title"]) }}">
-    {% block head %}{% end %}
-  </head>
-  <body>
-    <div id="body">
-      <div id="header">
-        <div style="float:right">
-          {% if current_user %}
-            <a href="/compose">{{ _("New post") }}</a> -
-            <a href="/auth/logout?next={{ url_escape(request.uri) }}">{{ _("Sign out") }}</a>
-          {% else %}
-            {% raw _('<a href="%(url)s">Sign in</a> to compose/edit') % {"url": "/auth/login?next=" + url_escape(request.uri)} %}
-          {% end %}
+<head>
+  <meta charset="UTF-8">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
+  <link rel="shortcut icon" type="image/png" href="../../img/favicon.png">
+
+  <title>{{ escape(handler.settings["mars_title"]) }}</title>
+
+  <link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="../static/css/main.css">
+  <link rel="stylesheet" href="../static/css/jsplumbtoolkit-defaults.css">
+  <link rel="stylesheet" href="../static/css/jsplumbtoolkit-demo.css">
+  <link rel="stylesheet" href="../static/css/demo.css">
+  <link rel="stylesheet" href="../static/css/topo.css">
+
+
+  {% block head %}{% end %}
+</head>
+<body>
+  <!-- <div id="nav"> -->
+    <!-- <div id="content" class="row"> -->
+      <div class="navbar navbar-top navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="/"><img src="../../img/logo-medium-jsplumb.png"></a>
+            <div class="community"></div>
+
+          </div>
+
+          <div class="navbar-collapse collapse nav-wrapper">
+            <ul class="nav navbar-nav">
+              <li><a href="../../">DEMOS</a></li>
+              <li><a href="../../doc/home.html">DOCS</a></li>
+              <li><a href="../../apidocs/index.html">API</a></li>
+              <li><a href="../../download">DOWNLOAD</a></li>
+              <li><a href="http://beta.jsplumbtoolkit.com/contact.html">CONTACT</a></li>
+              <li><a href="https://blog.jsplumbtoolkit.com">BLOG</a></li>
+
+            </ul>
+
+            <div class="social-nav hidden-xs">
+              <a href="http://twitter.com/jsplumblib" class="link"><span class="icon-twitter"></span></a>
+              <a href="http://github.com/sporritt/jsplumb/" class="link"><span class="icon-github"></span></a>
+              <a href="http://www.linkedin.com/company/jsplumb" class="link"><span class="icon-linkedin"></span></a>
+
+            </div>
+          </div><!--/.nav-collapse -->
         </div>
-        <h1><a href="/">{{ escape(handler.settings["blog_title"]) }}</a></h1>
       </div>
-      <div id="content">{% block body %}{% end %}</div>
+
+    <!-- </div> -->
+
+    <div id="body" class="container-fluid">
+      <div class="col-xs-1">{% block tree %}{% end %}</div>
+      <div class="col-xs-8">{% block body %}{% end %}</div>
+      <div class="col-xs-3">{% block console %}{% end %}</div>
     </div>
-    {% block bottom %}{% end %}
-  </body>
+  <!-- </div> -->
+  
+  {% block bottom %}{% end %}
+</body>
 </html>
