--- a/src/static/css/jsplumbtoolkit-demo.css
+++ b/src/static/css/jsplumbtoolkit-demo.css
@@ -239,7 +239,7 @@ path {
 }
 
 .navbar-top {
-    background-color: #58775d;
+    background-color: #cccccc;
     border:none;
     font-size: 14px;
     font-weight: 700;
