--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,35 +31,36 @@
       <div class="navbar navbar-top navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+<!--             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </button>
+            </button> -->
 
             <a class="navbar-brand" href="/"><img src="../../img/logo-medium-jsplumb.png"></a>
-            <div class="community"></div>
+            <!-- <div class="community"></div> -->
+            <h1 onclick="run()">RUN</h1>
 
           </div>
 
           <div class="navbar-collapse collapse nav-wrapper">
             <ul class="nav navbar-nav">
-              <li><a href="../../">DEMOS</a></li>
+<!--               <li><a href="../../">DEMOS</a></li>
               <li><a href="../../doc/home.html">DOCS</a></li>
               <li><a href="../../apidocs/index.html">API</a></li>
               <li><a href="../../download">DOWNLOAD</a></li>
               <li><a href="http://beta.jsplumbtoolkit.com/contact.html">CONTACT</a></li>
-              <li><a href="https://blog.jsplumbtoolkit.com">BLOG</a></li>
+              <li><a href="https://blog.jsplumbtoolkit.com">BLOG</a></li> -->
 
             </ul>
 
-            <div class="social-nav hidden-xs">
+<!--             <div class="social-nav hidden-xs">
               <a href="http://twitter.com/jsplumblib" class="link"><span class="icon-twitter"></span></a>
               <a href="http://github.com/sporritt/jsplumb/" class="link"><span class="icon-github"></span></a>
               <a href="http://www.linkedin.com/company/jsplumb" class="link"><span class="icon-linkedin"></span></a>
 
-            </div>
+            </div> -->
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -67,9 +68,9 @@
     <!-- </div> -->
 
     <div id="body" class="container-fluid">
-      <div class="col-xs-1">{% block tree %}{% end %}</div>
-      <div class="col-xs-8">{% block body %}{% end %}</div>
-      <div class="col-xs-3">{% block console %}{% end %}</div>
+      <div class="col-xs-2">{% block tree %}{% end %}</div>
+      <div class="col-xs-7">{% block body %}{% end %}</div>
+      <div class="col-xs-3">{% block console-form %}{% end %}</div>
     </div>
   <!-- </div> -->
   
