WebSocket with json

--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -5,6 +5,10 @@
 	padding-left: 10px;
 }
 
+.canvas {
+    background: url('../img/canvas.jpeg') repeat center #eee;
+
+}
 /*.row-fluid {
 	width: 100%;
 
