--- a/src/templates/console.html
+++ b/src/templates/console.html
@@ -1,7 +1,5 @@
-{% extends "topo.html" %}
-
 {% block console %}
 <div class="jtk-demo-main" id="console">
-	{{ _("result") }}
+	{{ results }}
 </div>
 {% end %}
