--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -8,7 +8,7 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseOne">
-					Data
+					<h4><strong>Data</strong></h4>
 				</a>
 			</h4>
 		</div>
@@ -27,13 +27,13 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseTwo">
-					Model
+					<h4><strong>Model</strong></h4>
 				</a>
 			</h4>
 		</div>
 		<div id="collapseTwo" class="panel-collapse collapse">
 			<div class="panel-body">
-				aaaaaaaaaaaa
+				RandomForest
 			</div>
 		</div>
 	</div>
@@ -42,13 +42,13 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseThree">
-					Evaluate
+					<h4><strong>Evaluate</strong></h4>
 				</a>
 			</h4>
 		</div>
 		<div id="collapseThree" class="panel-collapse collapse">
 			<div class="panel-body">
-				aaaaaaaaaaaa
+				Prediction
 			</div>
 		</div>
 	</div>
@@ -57,13 +57,13 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseThree">
-					Visualize
+					<h4><strong>Visualize</strong></h4>
 				</a>
 			</h4>
 		</div>
 		<div id="collapseThree" class="panel-collapse collapse">
 			<div class="panel-body">
-				aaaaaaaaaaaa
+				Hist
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
         <div class="jtk-demo-main">
 
             <!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide source-target-demo jtk-surface jtk-surface-nopan" id="canvas">
+            <div class="jtk-demo-canvas canvas-wide source-target-demo jtk-surface jtk-surface-nopan canvas" id="canvas">
                 <div class="window" id="sourceWindow1">
                     <strong>Window 1</strong>
                     <a href="#" id="enableDisableSource">disable</a>
@@ -105,22 +105,22 @@
 
 {% block console-form %}
 <div class="jtk-demo-main">
-    <form class="bs-example bs-example-form" role="form" id="scriptform">
+    <form  method="post" role="form"  id="scriptform">
         <div class="row">
-            <div class="col-lg-6">
                 <div class="input-group">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" name="run_script">
                     <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">Go!</button>
+                        <button class="btn btn-default" type="submit" >Go!</button>
                     </span>
                 </div><!-- /input-group -->
-            </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
+        {% module xsrf_form_html() %}	
     </form>
 </div>
 
-{% block console %}{% end %}
+<div id="console-div">
+	
+</div>
 
 {% end %}
 
-<script src="../static/js/topo.js"></script>
