--- a/src/static/css/jsplumbtoolkit-demo.css
+++ b/src/static/css/jsplumbtoolkit-demo.css
@@ -239,7 +239,7 @@ path {
 }
 
 .navbar-top {
-    background-color: #cccccc;
+    background-color: #f5f5f5;
     border:none;
     font-size: 14px;
     font-weight: 700;
