--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,9 +26,12 @@
   {% block head %}{% end %}
 </head>
 <body>
+
   <!-- <div id="nav"> -->
     <!-- <div id="content" class="row"> -->
       <div class="navbar navbar-top navbar-fixed-top" role="navigation">
+
+      
         <div class="container">
           <div class="navbar-header">
 <!--             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,13 +41,15 @@
               <span class="icon-bar"></span>
             </button> -->
 
-            <a class="navbar-brand" href="/"><img src="../../img/logo-medium-jsplumb.png"></a>
+            
             <!-- <div class="community"></div> -->
-            <h1 onclick="run()">RUN</h1>
+            <!-- <h1 onclick="run()">RUN</h1> -->
+
 
           </div>
 
           <div class="navbar-collapse collapse nav-wrapper">
+
             <ul class="nav navbar-nav">
 <!--               <li><a href="../../">DEMOS</a></li>
               <li><a href="../../doc/home.html">DOCS</a></li>
@@ -62,7 +67,18 @@
 
             </div> -->
           </div><!--/.nav-collapse -->
+
+
         </div>
+
+        <div class="logo">
+          <img src="../static/img/mars.png">
+        </div>
+
+        <div class="run_button">
+          <img src="../static/img/run.png" onclick="run()">
+        </div>
+
       </div>
 
     <!-- </div> -->
