--- a/src/static/css/jsplumbtoolkit-demo.css
+++ b/src/static/css/jsplumbtoolkit-demo.css
@@ -239,10 +239,15 @@ path {
 }
 
 .navbar-top {
-    background-color: #f5f5f5;
+    /*nav color*/
+    /*background-color: #f5f5f5;*/
+    background-color: #241c1c;
     border:none;
     font-size: 14px;
     font-weight: 700;
+    box-shadow:2px 2px 5px #333333;
+  
+
 }
 
 .navbar-nav > li > a {
