--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -56,14 +56,29 @@
 		<div class="panel-heading">
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
-				   href="#collapseThree">
+				   href="#collapseFour">
 					<h4><strong>Visualize</strong></h4>
 				</a>
 			</h4>
 		</div>
-		<div id="collapseThree" class="panel-collapse collapse">
+		<div id="collapseFour" class="panel-collapse collapse">
 			<div class="panel-body">
 				Hist
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" 
+				   href="#collapseFive">
+					<h4><strong>Customize</strong></h4>
+				</a>
+			</h4>
+		</div>
+		<div id="collapseFive" class="panel-collapse collapse">
+			<div class="panel-body">
+				None
 			</div>
 		</div>
 	</div>
@@ -79,7 +94,7 @@
 
             <!-- demo -->
             <div class="jtk-demo-canvas canvas-wide source-target-demo jtk-surface jtk-surface-nopan canvas" id="canvas">
-                <div class="window" id="sourceWindow1">
+<!--                 <div class="window" id="sourceWindow1">
                     <strong>Window 1</strong>
                     <a href="#" id="enableDisableSource">disable</a>
                 </div>
@@ -87,7 +102,10 @@
                 <div class="window smallWindow" id="targetWindow3"><strong>Window 3</strong><a href="#" class="enableDisableTarget">disable</a><br/><br/></div>
                 <div class="window smallWindow" id="targetWindow4"><strong>Window 4</strong><a href="#" class="enableDisableTarget">disable</a><br/><br/></div>
                 <div class="window smallWindow" id="targetWindow5"><strong>Window 5</strong><a href="#" class="enableDisableTarget">disable</a><br/><br/></div>
-                <div class="window smallWindow" id="targetWindow6"><strong>Window 6</strong><a href="#" class="enableDisableTarget">disable</a><br/><br/></div>
+                <div class="window smallWindow" id="targetWindow6"><strong>Window 6</strong><a href="#" class="enableDisableTarget">disable</a><br/><br/></div> -->
+
+                
+
             </div>
 			<!-- /demo -->
         </div>
@@ -96,10 +114,8 @@
         
 
 		<script src="../static/js/jsplumb.min.js"></script>
-		
 		<script src="../static/js/demo.js"></script>
 		<script src="../static/js/topo.js"></script>
-		<!-- <script src="../static/js/demo-list.js"></script> -->
 		
 {% end %}
 
