--- a/src/templates/console.html
+++ b/src/templates/console.html
@@ -1,3 +1,5 @@
-<div class="jtk-demo-main" id="console">
-	{{ results }}
+<!-- {% autoescape None %} -->
+<div class="jtk-demo-main console-content" id="console">
+	<!-- {% raw results %} -->
+	{{ _(results) }}
 </div>
