Run to jupyter and read/show df

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,7 +21,10 @@
   <link rel="stylesheet" href="../static/css/jsplumbtoolkit-demo.css">
   <link rel="stylesheet" href="../static/css/demo.css">
   <link rel="stylesheet" href="../static/css/topo.css">
-
+<!-- 
+  <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css">
+  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+  <script type="text/javascript">hljs.initHighlightingOnLoad();</script> -->
 
   {% block head %}{% end %}
 </head>
