--- a/src/templates/console.html
+++ b/src/templates/console.html
@@ -1,5 +1,6 @@
 <!-- {% autoescape None %} -->
 <div class="jtk-demo-main console-content" id="console">
 	<!-- {% raw results %} -->
-	{{ _(results) }}
+	<pre><code class="python">{{ _(results) }}</code></pre>
+	
 </div>
