--- a/src/templates/console.html
+++ b/src/templates/console.html
@@ -1,6 +1,7 @@
 <!-- {% autoescape None %} -->
-<div class="jtk-demo-main console-content" id="console">
+<div class="console-content" id="console">
 	<!-- {% raw results %} -->
-	<pre><code class="python">{{ _(results) }}</code></pre>
+	<!-- <pre><code class="python">{{ _(results) }}</code></pre> -->
+	{{ _(results) }}
 	
 </div>
