Need to complete inputs event and run flow

--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -64,6 +64,12 @@
 .console-div {
 	padding-top: 5px
 }
+
+.input-group {
+	padding-top: 5px
+}
+
+
 /*.ep {
     position: absolute;
     bottom: 37%;
