--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -163,7 +163,7 @@
 				</div>
 				<div id="collapse-inputs" class="panel-collapse collapse">
 					<div class="panel-body" id="func-inputs">
-						input1, input2
+						
 					</div>
 				</div>
 			</div>
@@ -177,8 +177,8 @@
 					</h4>
 				</div>
 				<div id="collapse-output" class="panel-collapse collapse">
-					<div class="panel-body" id="func-inputs">
-						output
+					<div class="panel-body" id="func-output">
+						
 						<div id="console-output"></div>
 					</div>
 				</div>
