Bind inputs/output & drag and 'Merge' work fine

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -16,10 +16,9 @@
 			<div class="panel-body" id="File" draggable="true" ondragend="addNode('Data', 'File', event)" onclick="showHelp('Data', 'File')">
 				Add File 
 			</div>
-<!-- 			<div class="panel-body" id="File">
-				Add File 
+			<div class="panel-body" id="Merge" draggable="true" ondragend="addNode('Data', 'Merge', event)" onclick="showHelp('Data', 'Merge')">
+				Merge File 
 			</div>
- -->
 		</div>
 	</div>
 	<div class="panel panel-default">
