--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="run_button">
-          <img src="../static/img/run.png" onclick="run()">
+          <img  id="run_button_img" src="../static/img/run.png" onclick="run()">
         </div>
 
       </div>
