--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -8,9 +8,10 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseOne">
-					<h4><strong>Data</strong></h4>
+					<h4><strong>Data<div class="tree-head tree-data"></div></strong></h4>
 				</a>
 			</h4>
+
 		</div>
 		<div id="collapseOne" class="panel-collapse collapse in">
 			<div class="panel-body" id="File" draggable="true" ondragend="addNode('Data', 'File', event)" onclick="showHelp('Data', 'File')">
@@ -26,7 +27,7 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseTwo">
-					<h4><strong>Model</strong></h4>
+					<h4><strong>Model<div class="tree-head tree-model"></div></strong></h4>
 				</a>
 			</h4>
 		</div>
@@ -41,7 +42,7 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseThree">
-					<h4><strong>Evaluate</strong></h4>
+					<h4><strong>Evaluate<div class="tree-head tree-evaluate"></div></strong></h4>
 				</a>
 			</h4>
 		</div>
@@ -56,7 +57,7 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseFour">
-					<h4><strong>Visualize</strong></h4>
+					<h4><strong>Visualize<div class="tree-head tree-visualize"></div></strong></h4>
 				</a>
 			</h4>
 		</div>
@@ -71,7 +72,7 @@
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-parent="#accordion" 
 				   href="#collapseFive">
-					<h4><strong>Customize</strong></h4>
+					<h4><strong>Customize<div class="tree-head tree-customize"></div></strong></h4>
 				</a>
 			</h4>
 		</div>
