--- a/src/static/css/demo.css
+++ b/src/static/css/demo.css
@@ -38,7 +38,7 @@
     -moz-box-shadow: 2px 2px 19px #aaa;*/
 
     border: 3px solid rgba(124,238,124,1);
-    -moz-border-radius: 0.5em;
+    -moz-border-radius: 0.6em;
     border-radius: 0.6em;
     opacity: 0.9;
     width: 160px;
@@ -46,18 +46,19 @@
     line-height: 80px;
     cursor: pointer;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     z-index: 20;
     position: absolute;
     /*background-color: #eeeeef;*/
     color: black;
     font-family: helvetica, sans-serif;
-    /*padding: 0.5em;*/
-    font-size: 0.9em;
-    -webkit-transition: -webkit-box-shadow 0.15s ease-in;
-    -moz-transition: -moz-box-shadow 0.15s ease-in;
-    -o-transition: -o-box-shadow 0.15s ease-in;
+    font-size: 1.2em;
+    -webkit-transition: -webkit-box-shadow 0.05s ease-in;
+    -moz-transition: -moz-box-shadow 0.05s ease-in;
+    -o-transition: -o-box-shadow 0.05s ease-in;
     transition: box-shadow 0.05s ease-in;
-    filter: alpha(opacity=50);background-color:rgba(255, 255, 255, 0.2);
+    filter: alpha(opacity=50); background-color:rgba(255, 255, 255, 0.4);
 }
 
 .smallWindow {
