Refactory node/message input/output structure. Need to dispatch message!

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -18,7 +18,7 @@
 				Add File 
 			</div>
 			<div class="panel-body" id="Merge" draggable="true" ondragend="addNode('Data', 'Merge', event)" onclick="showHelp('Data', 'Merge')">
-				Merge File 
+				Merge Data 
 			</div>
 		</div>
 	</div>
@@ -124,7 +124,7 @@
     <form  method="post" role="form"  id="scriptform">
         <div class="row">
                 <div class="input-group">
-                    <input type="text" class="form-control" name="code">
+                    <input type="text" class="form-control" name="content">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit" >Go</button>
                     </span>
