Drag 'Add File' node and run to get result! Donegit add .!

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -179,7 +179,7 @@
 				<div id="collapse-output" class="panel-collapse collapse">
 					<div class="panel-body" id="func-output">
 						
-						<div id="console-output"></div>
+						<!-- <div id="console-output"></div> -->
 					</div>
 				</div>
 			</div>
