'Split Data' works!

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -20,6 +20,15 @@
 			<div class="panel-body" id="Merge" draggable="true" ondragend="addNode('Data', 'Merge', event)" onclick="showHelp('Data', 'Merge')">
 				Merge Data 
 			</div>
+			<div class="panel-body" id="Fillna" draggable="true" ondragend="addNode('Data', 'Fillna', event)" onclick="showHelp('Data', 'Fillna')">
+				Fill Missing 
+			</div>
+			<div class="panel-body" id="Split" draggable="true" ondragend="addNode('Data', 'Split', event)" onclick="showHelp('Data', 'Split')">
+				Split Data 
+			</div>
+			<div class="panel-body" id="TrainTest" draggable="true" ondragend="addNode('Data', 'TrainTest', event)" onclick="showHelp('Data', 'TrainTest')">
+				Get Train Test 
+			</div>
 		</div>
 	</div>
 	<div class="panel panel-default">
