Add model/evaluate. Need to debug data format for inputs of each node func!

--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -56,7 +56,7 @@
 
 .console-content {
     /*white-space: pre-wrap;    */
-    height:820px;
+    /*height:820px;*/
     overflow: auto;
     width: 100%
 
@@ -81,7 +81,7 @@
 }
 
 .tree-data {
-    filter: alpha(opacity=50);background-color:rgba(124,238,124,0.8);
+    filter: alpha(opacity=50);background-color:rgba(100,221,23,0.8);
 }
 
 .tree-model {
