--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -41,8 +41,11 @@
 			</h4>
 		</div>
 		<div id="collapseTwo" class="panel-collapse collapse">
-			<div class="panel-body">
-				RandomForest
+			<div class="panel-body" id="RandomForestClassifier" draggable="true" ondragend="addNode('Model', 'RandomForestClassifier', event)" onclick="showHelp('Model', 'RandomForestClassifier')">
+				Random Forest Classifier 
+			</div>
+			<div class="panel-body" id="XGBoost" draggable="true" ondragend="addNode('Model', 'XGBoost', event)" onclick="showHelp('Model', 'XGBoost')">
+				XGBoost Classifier 
 			</div>
 		</div>
 	</div>
@@ -56,8 +59,14 @@
 			</h4>
 		</div>
 		<div id="collapseThree" class="panel-collapse collapse">
-			<div class="panel-body">
-				Prediction
+			<div class="panel-body" id="Predict" draggable="true" ondragend="addNode('Evaluate', 'Predict', event)" onclick="showHelp('Evaluate', 'Predict')">
+				Predict 
+			</div>
+			<div class="panel-body" id="PredictProb" draggable="true" ondragend="addNode('Evaluate', 'PredictProb', event)" onclick="showHelp('Evaluate', 'PredictProb')">
+				Predict Probability
+			</div>
+			<div class="panel-body" id="ROCAUCScore" draggable="true" ondragend="addNode('Evaluate', 'ROCAUCScore', event)" onclick="showHelp('Evaluate', 'ROCAUCScore')">
+				ROC AUC Score
 			</div>
 		</div>
 	</div>
@@ -102,7 +111,7 @@
         <div class="jtk-demo-main">
 
             <!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide source-target-demo jtk-surface jtk-surface-nopan canvas" id="canvas">
+            <div class="jtk-demo-canvas canvas-wide source-target-demo jtk-surface jtk-surface-nopan canvas" id="myCanvas">
 <!--                 <div class="window" id="sourceWindow1">
                     <strong>Window 1</strong>
                     <a href="#" id="enableDisableSource">disable</a>
