--- a/src/static/css/jsplumbtoolkit-demo.css
+++ b/src/static/css/jsplumbtoolkit-demo.css
@@ -37,7 +37,7 @@ body {
 
 .jtk-demo-canvas {
     margin-left: 160px;
-    height:850px;
+    height:780px;
     /*height: 100%;*/
     /*max-height:700px;*/
     border:1px solid #CCC;
@@ -241,7 +241,7 @@ path {
 .navbar-top {
     /*nav color*/
     /*background-color: #f5f5f5;*/
-    background-color: #241c1c;
+    background-color: #434343;
     border:none;
     font-size: 14px;
     font-weight: 700;
