--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -53,6 +53,15 @@
     cursor: pointer;
 }
 
+.console-part {
+    background-color: transparent;
+    font-family: Arial,sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+    max-width:1500px;
+    position: relative;
+}
 
 .console-content {
     /*white-space: pre-wrap;    */
