Change save button style

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -121,25 +121,12 @@
 
 			</ul>
 
-			<div class="saveWidget">
-				<div id="widgetConfirmCancel" class="input-group" style="display:none">
-	                <input type="text" class="form-control" id="widgetDivInput">
-	                <span class="input-group-btn">
-	                    <button class="btn btn-default" onclick="confirmWidget()">Confirm</button>
-	                    <button class="btn btn-default" onclick="cancelWidget()">Cancel</button>
-	                </span>
+			<div class="save-widget" id="saveWidget">
 
-
-				</div>
-
-				<div class="input-group" id="canvasButton">
-					<button class="btn btn-default" onclick="saveCanvas()" id="saveCanvasButton">Save</button>	
-					<button class="btn btn-default" onclick="inputWidgetName()" id="widgetButton">Widget</button>	
-			
-				</div>
-
-
-
+				<div class="input-group" id="canvasButton"> 
+                    <button class="btn btn-default" onclick="saveCanvas()" id="saveCanvasButton">Save</button>   
+                    <button class="btn btn-default" onclick="inputWidgetName()" id="widgetButton">Widget</button>    
+                </div>
 
 			</div>
 
