--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -110,7 +110,7 @@
 			<ul id="myTab" class="nav nav-tabs">
 				<li class="active">
 					<a href="#tab1" data-toggle="tab" id="maintab1">
-						 Main
+						Workspace
 					</a>
 				</li>
 <!-- 				<li>
@@ -180,10 +180,11 @@
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit" >Go</button>
                     </span>
-                    <input type="hidden" name="channel" value="script">
+                    
 
                 </div><!-- /input-group -->
         </div><!-- /.row -->
+        <input type="hidden" name="channel" value="script">
         {% module xsrf_form_html() %}	
     </form>
 
