--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -124,7 +124,7 @@
 			<div class="save-widget" id="saveWidget">
 
 				<div class="input-group" id="canvasButton"> 
-                    <button class="btn btn-default" onclick="saveCanvas()" id="saveCanvasButton">Save</button>   
+                    <button class="btn btn-default" onclick="saveCanvas()" id="saveCanvasButton">debug</button>   
                     <button class="btn btn-default" onclick="inputWidgetName()" id="widgetButton">Widget</button>    
                 </div>
 
