--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -95,8 +95,8 @@
 			</h4>
 		</div>
 		<div id="collapseFive" class="panel-collapse collapse">
-			<div class="panel-body">
-				None
+			<div class="panel-body" id="Merge3" draggable="true" ondragend="addNode('Customize', 'Merge3', event)" onclick="showHelp('Customize', 'Merge3')">
+				Merge 3 Data
 			</div>
 		</div>
 	</div>
